--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
       </section>
     </main>
 
-     
   </div>
 
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="/src/js/app.js"></script>
 </body>
 </html>
